Create Index File

--- a/folder/index.html
+++ b/folder/index.html
@@ -38,7 +38,7 @@
     <main>
         <h1>ADSO 3314566</h1>
         <img src="./bart.png" alt="">
-        <h4>Bart Simpson</h4>
+        <h4>Brayan Hernandez</h4>
     </main>
 </body>
 </html>
