se agregaron los archivos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ADSO 3314566</title>
     <style>
         body {
-            background: linear-gradient(rgb(219, 234, 129), rgb(251, 233, 39));
+            background: linear-gradient(rgb(242, 244, 225), rgb(0, 0, 0));
             color: white;
             display: flex;
             justify-content: center;
@@ -21,9 +21,11 @@
                     border: 6px solid white;
                     border-radius: 50%;
                     height: 250px;
+                    width: 250;
                     display: flex;
+                    aspect-ratio: 1/1;
+                    object-fit: cover;
                     margin:  1rem auto;
-                    width: 240px;
                 }
                 h4 {
                     text-align: center;
@@ -37,7 +39,7 @@
 <body>
     <main>
         <h1>ADSO 3314566</h1>
-        <img src="./bart.png" alt="">
+        <img src="./caricatura IA.png" alt="">
         <h4>Brayan Hernandez</h4>
     </main>
 </body>
