--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADSO 3314566</title>
     <style>
-    @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Playwrite+IN+Guides&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Slab:wght@100..900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Oswald:wght@200..700&family=Roboto+Slab:wght@100..900&display=swap');
         body {
-            font-family: "Poppins", sans-serif;
+            font-family: "Roboto Slab", serif;
             background: linear-gradient(rgb(242, 244, 225), rgb(0, 0, 0));
             color: white;
             display: flex;
