--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Oswald:wght@200..700&family=Roboto+Slab:wght@100..900&display=swap');
         body {
-            font-family: "Roboto Slab", serif;
             background: linear-gradient(rgb(242, 244, 225), rgb(0, 0, 0));
             color: white;
             display: flex;
@@ -16,6 +15,7 @@
             min-height: 100vh;
             main {
                 h1 {
+                    font-family: "Roboto Slab", serif;
                     font-size: 3.4rem;
                     margin: 0;
                 }
@@ -30,6 +30,7 @@
                     margin:  1rem auto;
                 }
                 h4 {
+                    font-family: "Dancing Script", cursive;
                     text-align: center;
                     font-size: 1.4rem;
                 }
